Clase08/04-despliegue-azure/backend1-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend1-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      env: dev
      app: backend1
  template:
    metadata:
      labels:
        env: dev
        app: backend1
    spec:
      containers:
        - name: backend1
          image: cursodocker15.azurecr.io/backend1
          imagePullPolicy: Always
          ports:
            - containerPort: 3010
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 3010
            initialDelaySeconds: 3
            periodSeconds: 3
