Clase08/04-despliegue-azure/backend2-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend2-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      env: dev
      app: backend2
  template:
    metadata:
      labels:
        env: dev
        app: backend2
    spec:
      containers:
        - name: backend2
          image: cursodocker15.azurecr.io/backend2
          imagePullPolicy: Always
          ports:
            - containerPort: 3020
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 3020
            initialDelaySeconds: 3
            periodSeconds: 3
